examples/stun-setters/crashers/4dd09422696288b4f97acd0b7f51ffb3f07dec28.output
panic: runtime error: index out of range

goroutine 1 [running]:
github.com/go-rtc/stun.fastXORBytes(0xc420010188, 0x4, 0x8, 0xc42001a21c, 0x5, 0x24, 0xc420053c98, 0x10, 0x10, 0xc420053c01)
	/tmp/go-fuzz-build843731397/gopath/src/github.com/go-rtc/stun/xor.go:38 +0xf5
github.com/go-rtc/stun.xorBytes(0xc420010188, 0x4, 0x8, 0xc42001a21c, 0x5, 0x24, 0xc420053c98, 0x10, 0x10, 0x40)
	/tmp/go-fuzz-build843731397/gopath/src/github.com/go-rtc/stun/xor.go:59 +0x9d
github.com/go-rtc/stun.(*XORMappedAddress).GetFromAs(0xc42000c600, 0xc4200181e0, 0x20, 0xc42001a218, 0xc4200181f8)
	/tmp/go-fuzz-build843731397/gopath/src/github.com/go-rtc/stun/xoraddr.go:111 +0x281
github.com/go-rtc/stun.(*XORMappedAddress).GetFrom(0xc42000c600, 0xc4200181e0, 0x7f58dc286001, 0x9)
	/tmp/go-fuzz-build843731397/gopath/src/github.com/go-rtc/stun/xoraddr.go:137 +0x3c
github.com/go-rtc/stun.FuzzSetters(0x7f58dc286000, 0xa, 0x200000, 0xc420092140)
	/tmp/go-fuzz-build843731397/gopath/src/github.com/go-rtc/stun/fuzz.go:97 +0x33c
go-fuzz-dep.Main(0x517548)
	/tmp/go-fuzz-build843731397/goroot/src/go-fuzz-dep/main.go:49 +0xde
main.main()
	/tmp/go-fuzz-build843731397/gopath/src/github.com/go-rtc/stun/go.fuzz.main/main.go:10 +0x2d

goroutine 17 [syscall, locked to thread]:
runtime.goexit()
	/tmp/go-fuzz-build843731397/goroot/src/runtime/asm_amd64.s:2197 +0x1
exit status 2